--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.16",
     "pino": "^8.15.1",
     "pino-http": "^8.5.0",
     "pino-pretty": "^13.0.0"
