--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,14 @@
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "/server.js"
+        },
+        {
             "src": "/(.*)",
             "dest": "/server.js"
         }
-    ]
+    ],
+    "regions": ["bom1"]
 }
 
