--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node seeds/courseSeeder.js && nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node -r dotenv/config seeds/index.js",
-    "seed:courses": "node -r dotenv/config seeds/courseSeeder.js"
+    "seed:courses": "node -r dotenv/config seeds/newCourseSeeder.js",
+    "seed:modules": "node -r dotenv/config seeds/moduleSeeder.js",
+    "clear:db": "node -r dotenv/config seeds/clearDatabase.js",
+    "reset:db": "npm run clear:db && npm run seed:courses && npm run seed:modules"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
